Fix wallet modal footer align

--- a/idea/frontend/src/features/wallet/ui/accounts-modal/accounts-modal.module.scss
+++ b/idea/frontend/src/features/wallet/ui/accounts-modal/accounts-modal.module.scss
@@ -16,7 +16,10 @@
 
 .footer {
   display: flex;
-  justify-content: space-between;
+
+  button:nth-child(2) {
+    margin-left: auto;
+  }
 }
 
 .list {
